--- a/publications/index.html
+++ b/publications/index.html
@@ -101,8 +101,8 @@
 			    
 			    <div class="publication">
 			    <p class="authors">K. Zhang, <span class="my-name">S. Feng</span>, Y. D. Lensky, N. Trivedi, E. A. Kim</p>
-				<p class="title">Machine learning feature discovery of spinon Fermi surface</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2306.03143" class="journal-link">arXiv:2306.03143 (2023)</a></p>
+				<p class="title">Machine learning reveals features of spinon Fermi surface</p>
+				<p class="journal"><a href="https://www.nature.com/articles/s42005-024-01542-8" class="journal-link">Communications Physics 7, 54 (2024)</a></p>
 			    </div>
 			    
 
