--- a/publications/index.html
+++ b/publications/index.html
@@ -90,7 +90,7 @@
 			    <div class="publication">
 				<p class="authors"><span class="my-name">S. Feng</span></p>
 				<p class="title">Hidden subsystem symmetry protected states in competing topological orders</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2309.02307" class="journal-link">arXiv:2309.02307 (2023)</a></p>
+				<p class="journal"><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.109.075151" class="journal-link">Phys. Rev. B 109, 075151 (2024)</a></p>
 			    </div>
 			    
 			    <div class="publication">
