--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<li><a href="archive/index.html">Archive</a></li>
 					<li><a href="publications/index.html">Research</a></li>
 					<li><a href="cv/CV_lastest.pdf">CV</a></li>
-					<li><a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a></li>
+					<li><a class="git" href="https://github.com/roy-369"><button>GitHub</button></a></li>
 				</ul>
 				</font>
 			</nav>
