--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<link rel="stylesheet" href="mystyle.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Shi Feng's Homepage</title>
+		<title>Sayantan Roy's Homepage</title>
 	</head>
 
 	<body>
 		<header class="navbar">
-			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
+			<div class="name"><font size=5>Sayantan Roy's homepage</font></div>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
@@ -26,7 +26,7 @@
 		<hr>
 
 		<p class="texts">
-		I'm a graduate student of theoretical condensed matter physics at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I am interested in understanding quantum phase transition, quantum spin liquids and their overlap with quantum information theory. When I am not hard at work, you can find me at the Union Cemetery.
+		I'm a graduate student at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I work with large scale numerical simulations and analytical techniques to understand emergent behavior in strongly correlated fermionic matter. I mostly use Determinant Quantum Monte Carlo simulations and statistical data analysis, supplemented by maximum entropy based analytical continuation techniques.
 		</p>	
 
 
