--- a/publications/index.html
+++ b/publications/index.html
@@ -64,7 +64,7 @@
 	    
 	<body>
 		<header class="navbar">
-			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
+			<div class="name"><font size=5>Sayantan Roy's homepage</font></div>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
@@ -72,8 +72,8 @@
 					<li><a href="../gleanings/index.html">Travelogue</a></li>
 					<li><a href="../archive/index.html">Archive</a></li>
 					<li><a href="index.html">Research</a></li>
-					<li><a href="../cv/CV_lastest.pdf">CV</a></li>
-					<li><a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a></li>
+					<li><a href="../cv/Resume_updated.pdf">CV</a></li>
+					<li><a class="git" href="https://github.com/roy-369"><button>GitHub</button></a></li>
 				</ul>
 				</font>
 			</nav>
