--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<header class="navbar">
-			<div class="name"><font size=5>Sayantan Roy's homepage</font></div>	
+			<div class="name"><font size=5>Sayantan Roy</font></div>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
@@ -26,7 +26,7 @@
 		<hr>
 
 		<p class="texts">
-		I'm a graduate student at <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Dr. Trivedi's group</a> in the Ohio State University. I work with large scale numerical simulations and analytical techniques to understand emergent behavior in strongly correlated fermionic matter. I mostly use Determinant Quantum Monte Carlo simulations and statistical data analysis, supplemented by maximum entropy based analytical continuation techniques.
+		I'm a graduate student in <a href="http://trivediresearch.org.ohio-state.edu/" target="_self">Prof. Trivedi's group</a> at the Ohio State University. I work with large scale numerical simulations and analytical techniques to understand emergent behavior in strongly correlated fermionic matter. I mostly use Determinant Quantum Monte Carlo simulations and statistical data analysis, supplemented by maximum entropy based analytical continuation techniques.
 		</p>	
 
 
