--- a/publications/index.html
+++ b/publications/index.html
@@ -64,7 +64,7 @@
 	    
 	<body>
 		<header class="navbar">
-			<div class="name"><font size=5>Sayantan Roy's homepage</font></div>	
+			<div class="name"><font size=5>Sayantan Roy</font></div>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
