--- a/publications/index.html
+++ b/publications/index.html
@@ -88,9 +88,9 @@
 
 			<div class="publication-list">
 			    <div class="publication">
-				<p class="authors">M. Kliczkowski, L. Keyes,<span class="my-name">S. Roy</span> T. Paiva, M. Randeria, N. Trivedi, M. Maska</p>
+				<p class="authors">M. Kliczkowski, L. Keyes, <span class="my-name">S. Roy</span> T. Paiva, M. Randeria, N. Trivedi, M. Maska</p>
 				<p class="title">Autoencoder-based analytic continuation method for strongly correlated quantum systems</p>
-				<p class="journal"><a href="https://arxiv.org/abs/2311.17920" class="journal-link">2311.17920</a></p>
+				<p class="journal"><a href="https://arxiv.org/abs/2311.17920" class="journal-link">arxiv:2311.17920</a></p>
 			    </div>
 			    
 			    <div class="publication">
