--- a/publications/index.html
+++ b/publications/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Shi Feng's Research</title>
+		<title>Research</title>
 	</head>
 	    <style>
 		.publications-container {
