--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="gleanings/index.html">Travelogue</a></li>
 					<li><a href="archive/index.html">Archive</a></li>
-					<li><a href="publications/index.html">Publications</a></li>
+					<li><a href="publications/index.html">Research</a></li>
 					<li><a href="cv/Resume_updated.pdf">Resume</a></li>
 					<li><a class="git" href="https://github.com/roy-369"><button>GitHub</button></a></li>
 				</ul>
