--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -4,12 +4,12 @@
 		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>Shi Feng's Travelogue</title>
+		<title>Sayantan Roy's Travelogue</title>
 	</head>
 
 	<body>
 		<header class="navbar">
-			<div class="name"><font size=5>Shi Feng's homepage</font></div>	
+			<div class="name"><font size=5>Sayantan Roy</font></div>	
 			<nav>
 				<ul class="nav__links">
 				<font size = 4>
@@ -17,8 +17,8 @@
 					<li><a href="index.html">Travelogue</a></li>
 					<li><a href="../archive/index.html">Archive</a></li>
 					<li><a href="../publications/index.html">Research</a></li>
-					<li><a href="../cv/CV_lastest.pdf">CV</a></li>
-					<li><a class="git" href="https://github.com/fengshi96"><button>GitHub</button></a></li>
+					<li><a href="../cv/CV_lastest.pdf">Resume</a></li>
+					<li><a class="git" href="https://github.com/roy-369"><button>GitHub</button></a></li>
 				</ul>
 				</font>
 			</nav>
