--- a/gleanings/index.html
+++ b/gleanings/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ume<!DOCTYPE html>
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 					<li><a href="index.html">Travelogue</a></li>
 					<li><a href="../archive/index.html">Archive</a></li>
 					<li><a href="../publications/index.html">Research</a></li>
-					<li><a href="../cv/CV_lastest.pdf">Resume</a></li>
+					<li><a href="../cv/Resume_updated.pdf">Resume</a></li>
 					<li><a class="git" href="https://github.com/roy-369"><button>GitHub</button></a></li>
 				</ul>
 				</font>
